tests/invalid/random_seed_non_int_arg/main.py
import random

if __name__ == "__main__":
    random.seed(1.0)
